[package]
name = "clang-ast"
version = "0.1.17" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["compilers", "encoding"]
description = "Data structures for processing Clang's `-ast-dump=json` format"
documentation = "https://docs.rs/clang-ast"
edition = "2018"
keywords = ["clang", "c++"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/clang-ast"

[dependencies]
serde = "1.0"

[dev-dependencies]
clang-ast-test-suite = { version = "0", path = "tests/clone" }
rustversion = "1"
serde_derive = "1.0"
serde_json = "1.0"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
