[package]
name = "clang-ast"
version = "0.1.34"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["compilers", "encoding"]
description = "Data structures for processing Clang's `-ast-dump=json` format"
documentation = "https://docs.rs/clang-ast"
edition = "2021"
keywords = ["clang", "c++"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/clang-ast"

[dependencies]
foldhash = "0.2"
serde_core = "1.0.220"

[target.'cfg(any())'.dependencies]
serde = { version = "1.0.220", optional = true, default-features = false }

[dev-dependencies]
clang-ast-test-suite = { version = "0", path = "tests/clone" }
monostate = "1"
rustversion = "1.0.13"
serde = "1.0.220"
serde_derive = "1.0.220"
serde_json = "1.0.99"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]

[workspace]
